# rag-project

./: .gitignore  Implementation.md  README.md  app.py  benchmark_results.csv  edgartest.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  run_benchmark.py
.streamlit/: config.toml
benchmark_runs/: b4aae7fecdff.json  cf7ca5cbc487.json
data/filings/: AAPL_2020_section_1_chunks.pkl  AAPL_2020_section_1_vecs.pkl  AAPL_2020_section_1a_chunks.pkl  AAPL_2020_section_1a_vecs.pkl  AAPL_2023_section_1a_chunks.pkl  AAPL_2023_section_1a_vecs.pkl  AAPL_2025_section_1_chunks.pkl  AAPL_2025_section_1_vecs.pkl  AAPL_2025_section_1a_chunks.pkl  AAPL_2025_section_1a_vecs.pkl  AMZN_2020_section_1a_chunks.pkl  AMZN_2020_section_1a_vecs.pkl  AMZN_2020_section_7_chunks.pkl  AMZN_2020_section_7_vecs.pkl  AMZN_2020_section_8_chunks.pkl  AMZN_2020_section_8_vecs.pkl  AMZN_2023_section_1a_chunks.pkl  AMZN_2023_section_1a_vecs.pkl  AMZN_2023_section_7_chunks.pkl  AMZN_2023_section_7_vecs.pkl  AMZN_2023_section_8_chunks.pkl  AMZN_2023_section_8_vecs.pkl  NKE_2020_section_1a_chunks.pkl  NKE_2020_section_1a_vecs.pkl  NKE_2023_section_1a_chunks.pkl  NKE_2023_section_1a_vecs.pkl
scripts/: analyze_benchmark_failures.py  create_test_cases.py
src/: __init__.py  cache.py  chunk.py  embed.py  evaluate.py  filing_select.py  generate.py  ingest.py  retrieve.py  view_schemas.py
tests/: test_cases.jsonl
